monticore-generator/src/test/resources/cocos/invalid/A4023/A4023c.mc4
/* (c) https://github.com/MontiCore/monticore */

package cocos.invalid.A4023;

grammar A4023c extends cocos.invalid.A4023b{

 A = "a";

}
